[gd_scene format=3 uid="uid://nev1yaebovqi"]

[ext_resource type="Script" uid="uid://btp72moifheus" path="res://actors/_common/battle_enemy.gd" id="1_3qdsu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_452ge"]

[sub_resource type="Gradient" id="Gradient_3qdsu"]
colors = PackedColorArray(1, 1, 1, 0.47900003, 0, 0, 0, 0.77800006)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_452ge"]
gradient = SubResource("Gradient_3qdsu")
fill = 1
fill_from = Vector2(0.5, 0.5)
repeat = 1

[sub_resource type="Animation" id="Animation_452ge"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BattleSceneContainer/Marker2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(32, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BattleSceneContainer/Marker2D/BattleSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tvobl"]
resource_name = "critical_hit"
length = 0.2666689
step = 0.022222223
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BattleSceneContainer/Marker2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.26666668),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(32, 32), Vector2(32, 21), Vector2(32, 32), Vector2(32, 21), Vector2(32, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BattleSceneContainer/Marker2D/BattleSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.26666668),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cahvh"]
resource_name = "focused"
length = 0.75
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BattleSceneContainer/Marker2D/BattleSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.25516, 1.25516, 1.25516, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3qdsu"]
resource_name = "normal_hit"
length = 0.13333556
step = 0.022222223
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BattleSceneContainer/Marker2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(32, 32), Vector2(32, 21), Vector2(32, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BattleSceneContainer/Marker2D/BattleSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hsd6o"]
resource_name = "unfocused"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BattleSceneContainer/Marker2D/BattleSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tvobl"]
_data = {
&"RESET": SubResource("Animation_452ge"),
&"critical_hit": SubResource("Animation_tvobl"),
&"focused": SubResource("Animation_cahvh"),
&"normal_hit": SubResource("Animation_3qdsu"),
&"unfocused": SubResource("Animation_hsd6o")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3qdsu"]

[node name="BattleEnemy" type="Control" unique_id=614352980]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_3qdsu")

[node name="BattleSceneContainer" type="PanelContainer" parent="." unique_id=1774435762]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_452ge")

[node name="Marker2D" type="Marker2D" parent="BattleSceneContainer" unique_id=296905401]
unique_name_in_owner = true
position = Vector2(32, 32)

[node name="BattleSprite" type="Sprite2D" parent="BattleSceneContainer/Marker2D" unique_id=674247444]
unique_name_in_owner = true
texture = SubResource("GradientTexture2D_452ge")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1006439652]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_tvobl")

[node name="Button" type="Button" parent="." unique_id=671304003]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3qdsu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3qdsu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3qdsu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3qdsu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3qdsu")
